--- a/app/src/main/res/layout/activity_reproducir.xml
+++ b/app/src/main/res/layout/activity_reproducir.xml
@@ -7,74 +7,67 @@
     tools:context="com.example.michen.reproductor.reproducir">
 
 
-    <Button
-        android:id="@+id/izquierda"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="izq"
-        android:layout_marginLeft="16dp"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="453dp"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:id="@+id/linearLayout">
 
-    <Button
-        android:id="@+id/derecha"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="derecha"
-        tools:layout_editor_absoluteY="453dp"
-        app:layout_constraintLeft_toRightOf="@+id/izquierda" />
+        <SeekBar
+            android:id="@+id/seekBarVolumen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/play"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="play"
-        tools:layout_editor_absoluteY="453dp"
-        app:layout_constraintLeft_toRightOf="@+id/derecha"
-        android:layout_marginLeft="1dp"
-        android:layout_marginStart="1dp" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/stop"
-        android:layout_width="70dp"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="368dp"
         android:layout_height="50dp"
-        android:text="stop"
-        tools:layout_editor_absoluteY="453dp"
-        app:layout_constraintLeft_toRightOf="@+id/play" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="245dp"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-    <Button
-        android:id="@+id/pausa"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="pausa"
-        app:layout_constraintLeft_toRightOf="@+id/stop"
-        android:layout_marginLeft="1dp"
-        android:layout_marginStart="1dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="453dp" />
+        <Button
+            android:id="@+id/btlist"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="280dp"
+            android:layout_weight="1"
+            android:text="lista"
+            app:layout_constraintHorizontal_bias="0.446"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    </LinearLayout>
 
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="376dp"
+        android:layout_marginTop="377dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp" />
-
-    <Button
-        android:id="@+id/btlist"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:text="lista"
-        android:layout_marginLeft="306dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="313dp"
-        android:layout_marginStart="305dp" />
 
     <TextView
         android:id="@+id/tiempo1"
@@ -109,15 +102,45 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="16dp" />
 
-    <SeekBar
-        android:id="@+id/seekBarVolumen"
-        android:layout_width="354dp"
-        android:layout_height="24dp"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        tools:layout_editor_absoluteY="19dp" />
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+
+
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <Button
+            android:id="@+id/izquierda"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="izq" />
+
+        <Button
+            android:id="@+id/play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="play"
+        />
+
+        <Button
+            android:id="@+id/derecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="derecha" />
+
+        <Button
+            android:id="@+id/pausa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="pausa" />
+
+    </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
