--- a/app/src/main/res/layout/canciones.xml
+++ b/app/src/main/res/layout/canciones.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@android:color/background_dark"
+        android:textSize="30dp" />
 
 </LinearLayout>
